<?xml version="1.0"?>
<package>
  <name>robert_launch</name>
  <version>0.0.1</version>
  <description>The robert_launch package</description>
  <maintainer email="ucuapps@todo.todo">UCU APPS</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>husky_viz</run_depend>
  <run_depend>robert_gazebo</run_depend>
</package>
